@@ -1,5 +1,6 @@
 Upcoming:
 - The advanced porter gui works again
+- The teleportprobe gui works again
 
 1.2.9-alpha:
 - Fixed a networking problem on servers
